--- a/application.css
+++ b/application.css
@@ -2210,7 +2210,10 @@ td.stores_pin{
 .feature_label{
     background-color: #1c9798;
 }
-
+.long_feature_box {
+    margin-bottom: 20px;
+    height: 193px;
+}
 .stores_table_headers{
     background-color: #1c9798;
 }
