--- a/application.css
+++ b/application.css
@@ -1073,7 +1073,7 @@ a.btn-prime {
     margin:0px;
 }
 
-.long_feature_box .feature_label p{
+.long_feature_label p{
     font-size: 0.5em;
     line-height: 1em;
     margin-top: 10px;
