Marlborough Mall 1.0  /application.css

--- a/application.css
+++ b/application.css
@@ -2188,6 +2188,9 @@ td.stores_pin{
 .btn-nav{
     color:  black;  
 }
+.hour_box .check_hours {
+    color: #1c9798;
+}
 .feature_label, .long_feature_label {
     background-color: #1c9798;
 }
