Marlborough Mall 1.0  /application.css

--- a/application.css
+++ b/application.css
@@ -2182,7 +2182,7 @@ td.stores_pin{
     background-color: #6d6f71;
 }
 #centre_logo{
-    top: 0;
+    top: 5px;
 }
 .btn-nav{
     color:  black;  
