Marlborough Mall 1.0  /application.css

--- a/application.css
+++ b/application.css
@@ -579,6 +579,7 @@ legend{
     border-top: solid 1px black;
     border-bottom: solid 1px black;
     padding: 2px 0px;
+    display: none;
 }
 
 .welcome_message span{
