--- a/application.css
+++ b/application.css
@@ -2249,6 +2249,9 @@ td.stores_pin{
 .blogpost{
     padding-right:10px;
 }
+.blogpost img {
+    max-width: 100%;
+}
 .blogpost_content{
     max-height:120px;
 }
