--- a/application.css
+++ b/application.css
@@ -93,7 +93,13 @@ p{
     font-size: 1.2em;
     line-height: 1.3em;
 }
-
+a {
+    text-decoration: none;
+}
+a:hover {
+    text-decoration: none;
+    color: inherit;
+}
 .header {
     background-color: white;
     padding:0;
