Marlborough Mall 1.0  /application.css

--- a/application.css
+++ b/application.css
@@ -1494,7 +1494,7 @@ hr{
 #zoom_container .landmarks .mark .text {
     margin-bottom: 5px;
     padding: 2px 6px;
-    background-color: #000;
+    background-color: #1c9798;
     border-radius: 4px;
     text-align: center;
 }
