Marlborough Mall 1.0  /application.css

--- a/application.css
+++ b/application.css
@@ -580,12 +580,13 @@ legend{
     max-width:940px;
     margin: 0 auto;
 }
-
+#welcome_message {
+    display: none;    
+}
 .welcome_message{    
     border-top: solid 1px black;
     border-bottom: solid 1px black;
     padding: 2px 0px;
-    display: none;
 }
 
 .welcome_message span{
