--- a/application.css
+++ b/application.css
@@ -594,7 +594,7 @@ legend{
     display: block;
     border-top: solid 2px black;
     border-bottom: solid 2px black;
-    font-size: 0.55em;
+    font-size: 13.2px;
     font-weight: lighter;
     padding: 10px 25px;
 }
