Marlborough Mall 1.0  /application.css

--- a/application.css
+++ b/application.css
@@ -599,9 +599,13 @@ legend{
     padding: 10px 25px;
 }
 
-.stores_table_headers{
-	background-color: black;
-	color:white;
+.stores_table_headers {
+    padding-top: 6px;
+    padding-left: 12px;
+    height: 36px;
+    text-align: left;
+    color: white;
+    background-color: black;
 }
 
 .stores_table_headers .pull-right {
