Marlborough Mall 1.0  /application.css

--- a/application.css
+++ b/application.css
@@ -918,7 +918,8 @@ a.btn-prime {
 }
 
 .accordion-heading{
-    height: 75px;
+    // height: 75px;
+    height: auto;
 }
 
 .accordion-heading .accordion-toggle {
