Marlborough Mall 1.0  /application.css

--- a/application.css
+++ b/application.css
@@ -585,8 +585,8 @@ legend{
     display: none;    
 }
 .welcome_message{    
-    // border-top: solid 1px black;
-    // border-bottom: solid 1px black;
+    border-top: solid 1px black;
+    border-bottom: solid 1px black;
     padding: 2px 0px;
 }
 
