Marlborough Mall 1.0  /application.css

--- a/application.css
+++ b/application.css
@@ -1801,9 +1801,9 @@ td.stores_pin{
         width: 100%;
         margin-bottom: 10px;
     }
-    // .long_feature_label {
-    //     top: 73%;
-    // }
+    .long_feature_label {
+        font-size: 1.4em;
+    }
     .alphabet_bg .btn-secondary {
         padding: 0 2.25%;
     }
