--- a/application.css
+++ b/application.css
@@ -1755,24 +1755,17 @@ td.stores_pin{
         float: right;
         margin-top: 10px;    
     }
-    
     .hour_box{
         width: 65%;
         height: 227px;
     }
-    
-    // .hour_box .feature_label {
-    //     padding: 17px 2% 0;
-    // }
     .hour_box .check_hours {
         padding: 0;
         padding-left: 10px;
     }
-    
     .hour_box p{
         font-size: 2.1em;
     }
-    
     .right_feature_box {
         margin-top: 0px;
         position: absolute;
@@ -1796,7 +1789,8 @@ td.stores_pin{
     }
     
     .long_feature_box {
-        height: 138px;
+        min-height: 137px;
+        height: auto;
         float: none;
         width: 100%;
         margin-bottom: 10px;
