--- a/application.css
+++ b/application.css
@@ -1388,7 +1388,6 @@ hr{
     left: 0;
     border-radius: 4px;
 }
-
 .demo1 {
     height: 457px;
     width: 100%;
@@ -1397,17 +1396,19 @@ hr{
     box-shadow: none;
     border: solid 1px #5e514e;
     border-radius: 0;
-    
 }
-
-.media-body h4{
+#_zi_icon {
+    background: transparent url(//www.marlboroughmall.com/assets/icons.png) -8px -8px no-repeat !important;
+}
+#_zo_icon {
+    background: transparent url(https://www.marlboroughmall.com/assets/icons.png) -58px -8px no-repeat !important;
+}
+.media-body h4 {
     color: gray;
 }
-
-.media-body h4 p{
+.media-body h4 p {
     color: black;
 }
-
 .marker {
     margin-top: 5px;
     display: block;
@@ -1424,7 +1425,6 @@ hr{
     background-color: #4c4c4c;
     border: 1px solid #c62e2e;
     font-family: futura_medium;
-    
     text-align: center;
     background: none repeat scroll 0 0 #4c4c4c;
     color: #FFFFFF;
@@ -1434,11 +1434,9 @@ hr{
     padding-bottom: 8px;
     width: 200px;
 }
-
 .map_page{
     position:relative;
 }
-
 .controls{
     top:0;
     left:1px;
@@ -1446,7 +1444,6 @@ hr{
     background-color: #4D413E;
     opacity:0.7;
 }
-
 .controls a{
     cursor: pointer;
     padding-left: 5px;
