--- a/application.css
+++ b/application.css
@@ -1515,7 +1515,11 @@ td.stores_pin{
 #contest_form input#age{
     width:35px;
 }
-
+.help-block{
+    margin-top: -20px;
+    margin-bottom: 0;
+    font-size: 14px;
+}
 /******** pages **********/
 .page_body h1{
     padding-top: 0px;
