--- a/application.css
+++ b/application.css
@@ -1510,6 +1510,8 @@ td.stores_pin{
     font-family: futura_medium_light, Helvetica, sans-serif;
 }
 #contest_form input {
+    margin-top: 5px;
+    margin-bottom: 25px;
     width: 100%;
 }
 #contest_form input#age{
