--- a/application.css
+++ b/application.css
@@ -2069,7 +2069,8 @@ td.stores_pin{
 #contest_form_20vic .contest_checkbox{
     font-size: 10pt;    
 }
-.contest_page .contest_description{
+.contest_page .contest_description,
+.contest_page .contest_description p {
     font-family: futura_medium_light, futura_medium_light_ie;
     font-size: 1.2em;
     line-height: 1.3em;
