--- a/application.css
+++ b/application.css
@@ -2069,13 +2069,17 @@ td.stores_pin{
 #contest_form_20vic .contest_checkbox{
     font-size: 10pt;    
 }
-.contest_page .contest_description,
-.contest_page .contest_description p {
+.contest_page .contest_description {
     font-family: futura_medium_light, futura_medium_light_ie;
     font-size: 1.2em;
     line-height: 1.3em;
     color: #6D6F71;
     padding: 15px 5px 10px 5px;
+}
+.contest_page .contest_description p {
+    font-family: futura_medium_light, futura_medium_light_ie;
+    font-size: 1.2em;
+    line-height: 1.3em;
 }
 .contest_page img {
     max-width: 100%;
