--- a/application.css
+++ b/application.css
@@ -2078,7 +2078,7 @@ td.stores_pin{
 }
 .contest_page .contest_description p {
     font-family: futura_medium_light, futura_medium_light_ie;
-    font-size: 1.2em;
+    font-size: 19.2px;
     line-height: 1.3em;
 }
 .contest_page img {
