Marlborough Mall 1.0  /application.css

--- a/application.css
+++ b/application.css
@@ -2089,7 +2089,12 @@ td.stores_pin{
 #agree_terms{
     margin: -4px 0 0;    
 }
-
+.success_msg {
+    font-family: futura_medium_light, futura_medium_light_ie;
+    font-size: 1.2em;
+    line-height: 1.3em;
+    color: #6D6F71;
+}
 /* ***Property CSS *** */
 .brand_nav{
     position: relative;
