--- a/application.css
+++ b/application.css
@@ -2089,7 +2089,7 @@ td.stores_pin{
 #agree_terms{
     margin: -4px 0 0;    
 }
-.success_msg {
+#success_msg {
     font-family: futura_medium_light, futura_medium_light_ie;
     font-size: 1.2em;
     line-height: 1.3em;
