Marlborough Mall 1.0  /application.css

--- a/application.css
+++ b/application.css
@@ -2083,6 +2083,8 @@ td.stores_pin{
     max-width: 100%;
 }
 .contest_page select {
+    margin-top: 5px;
+    margin-bottom: 25px;
     width: 100%;
     height: 32px;
 }
