Marlborough Mall 1.0  /application.css

--- a/application.css
+++ b/application.css
@@ -2102,7 +2102,7 @@ td.stores_pin{
     font-size: 14px;
     font-weight: normal;
     line-height: 20px;
-    font-family: futura_medium_light, Helvetica, sans-serif;
+    font-family: futura_medium, Helvetica, sans-serif;
 }
 #contest_form .form-control {
     margin-top: 5px;
