Marlborough Mall 1.0  /application.css

--- a/application.css
+++ b/application.css
@@ -2099,6 +2099,7 @@ td.stores_pin{
 }
 /********* contest form *********/
 #contest_form label{
+    margin-bottom: 0;
     font-size: 14px;
     font-weight: 500;
     line-height: 20px;
