Marlborough Mall 1.0  /application.css

--- a/application.css
+++ b/application.css
@@ -2124,8 +2124,8 @@ td.stores_pin{
     text-decoration: underline;
 }
 .help-block{
-    margin-top: -20px;
-    margin-bottom: 0;
+    margin-top: -23px;
+    margin-bottom: 5px;
     font-size: 12px;
 }
 .contest_btn {
