Marlborough Mall 1.0  /application.css

--- a/application.css
+++ b/application.css
@@ -2087,6 +2087,7 @@ td.stores_pin{
     margin-bottom: 25px;
     width: 100%;
     height: 32px;
+    font-family: futura_medium_light, Helvetica, sans-serif;
 }
 #agree_terms{
     margin: -4px 0 0;    
