--- a/application.css
+++ b/application.css
@@ -1399,10 +1399,10 @@ hr{
     border-radius: 0;
 }
 #_zi_icon {
-    background: transparent url(//www.marlboroughmall.com/assets/icons.png) -8px -8px no-repeat !important;
+    background: transparent url(//codecloud.cdn.speedyrails.net/sites/586524e76e6f643321000000/image/png/1497039218000/icons.png) -8px -8px no-repeat !important;
 }
 #_zo_icon {
-    background: transparent url(https://www.marlboroughmall.com/assets/icons.png) -58px -8px no-repeat !important;
+    background: transparent url(//codecloud.cdn.speedyrails.net/sites/586524e76e6f643321000000/image/png/1497039218000/icons.png) -58px -8px no-repeat !important;
 }
 .media-body h4 {
     color: gray;
@@ -1417,7 +1417,7 @@ hr{
     height: 65px;
     text-indent: -9999px;
     outline: none;
-    background:url("//www.mallmaverick.com/system/sites/map_markers/000/000/027/original/map_marker.png?1417461836") no-repeat;
+    background: url(//codecloud.cdn.speedyrails.net/sites/586524e76e6f643321000000/image/png/1497039299000/map_marker.png) no-repeat;
     cursor: pointer;
 }
 .popup {
