--- a/application.css
+++ b/application.css
@@ -1454,10 +1454,10 @@ hr{
     border-radius: 0;
     margin: 5px;
     height: auto;
-    background: url(/system/site_images/photos/000/000/773/original/arrow_down.png?1381269994) no-repeat scroll 95% 40% / 14px 10px white;
+    background: url(//codecloud.cdn.speedyrails.net/sites/586524e76e6f643321000000/image/png/1497038985000/arrow_down.png) no-repeat scroll 95% 40% / 14px 10px white;
 }
 .controls a:hover{
-    background: url(/system/site_images/photos/000/000/773/original/arrow_down.png?1381269994) no-repeat scroll 95% 40% / 14px 10px white;
+    background: url(//codecloud.cdn.speedyrails.net/sites/586524e76e6f643321000000/image/png/1497038985000/arrow_down.png) no-repeat scroll 95% 40% / 14px 10px white;
 }
 .mapper {
     margin-top: 32px;
