--- a/application.css
+++ b/application.css
@@ -1334,7 +1334,7 @@ hr{
 #promo, #job {
     display: none;
 }
-.promo_info img {
+#promo_details_container img {
     width: 100%;
     height: 100%;
 }
