--- a/application.css
+++ b/application.css
@@ -1322,8 +1322,7 @@ hr{
     text-decoration: none;
 }
 .promo_info{
-    // float:left;
-    // width:72%;
+    word-wrap: break-word;
 }
 
 .promo_info a {
@@ -1334,9 +1333,10 @@ hr{
 #promo, #job {
     display: none;
 }
-#promo_details_container img {
-    max-width: 100%;
-    // height: 100%;
+#promo_details_container img,
+#event_details_container img {
+    width: 100%;
+    height: 100%;
 }
 /************** lightbox *************/
 .lightbox {
