--- a/application.css
+++ b/application.css
@@ -1502,20 +1502,30 @@ td.stores_pin{
     text-align:right;
 }
 
-/********* contest form *********/
-#contest_form label{
-    font-weight:500;
-}
-#contest_form input {
-    max-width:300px;
-    width: 100%;
-}
-#contest_form input#postal_code{
-    width:65px;
-}
-#contest_form input#age{
-    width:35px;
-}
+// /********* contest form *********/
+// #contest_form label{
+//     font-weight:500;
+// }
+// #contest_form input {
+//     max-width:300px;
+//     width: 100%;
+    
+//         background-color: #ffffff;
+//     border: 1px solid #cccccc;
+//     -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,0.075);
+//     -moz-box-shadow: inset 0 1px 1px rgba(0,0,0,0.075);
+//     box-shadow: inset 0 1px 1px rgba(0,0,0,0.075);
+//     -webkit-transition: border linear 0.2s, box-shadow linear 0.2s;
+//     -moz-transition: border linear 0.2s, box-shadow linear 0.2s;
+//     -o-transition: border linear 0.2s, box-shadow linear 0.2s;
+//     transition: border linear 0.2s, box-shadow linear 0.2s;
+// }
+// #contest_form input#postal_code{
+//     width:65px;
+// }
+// #contest_form input#age{
+//     width:35px;
+// }
 
 /******** pages **********/
 .page_body h1{
