--- a/application.css
+++ b/application.css
@@ -1547,26 +1547,23 @@ td.stores_pin{
 
 .page_body #contest_form {
     input {
-    max-width:300px;
-    width: 100%;
-    
-    background-color: #ffffff;
-    border: 1px solid #cccccc;
-    -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,0.075);
-    -moz-box-shadow: inset 0 1px 1px rgba(0,0,0,0.075);
-    box-shadow: inset 0 1px 1px rgba(0,0,0,0.075);
-    -webkit-transition: border linear 0.2s, box-shadow linear 0.2s;
-    -moz-transition: border linear 0.2s, box-shadow linear 0.2s;
-    -o-transition: border linear 0.2s, box-shadow linear 0.2s;
-    transition: border linear 0.2s, box-shadow linear 0.2s;
+        margin-bottom: 9px;
+        padding: 4px 6px;
+        max-width: 300px;
+        width: 100%;
+        height: 30px;
+        display: inline-block;
+        border: 1px solid #cccccc;
+        border-radius: 3px;
+        background-color: #ffffff;
+        box-shadow: inset 0 1px 1px rgba(0,0,0,0.075);
+        font-size: 14px;
+        line-height: 20px;
+        color: #555555;
+        transition: border linear 0.2s, box-shadow linear 0.2s;
+    }
 }
-// #contest_form input#postal_code{
-//     width:65px;
-// }
-// #contest_form input#age{
-//     width:35px;
-// }
-}
+
 /********* simply-scroll-list *********/
 .simply-scroll{
     height:auto;
