Marlborough Mall 1.0  /application.css

--- a/application.css
+++ b/application.css
@@ -1573,6 +1573,7 @@ td.stores_pin{
         width: 40.17094017094017%;
     }
     .row-fluid .span6 {
+        margin-left: 2.564102564102564%;
         width: 48.717948717948715%;
     }
 }
