--- a/application.css
+++ b/application.css
@@ -1570,11 +1570,11 @@ td.stores_pin{
     }
 
     .row-fluid .span5 {
-        width: 40.17094017094017%;
+        width: 40%;
     }
     .row-fluid .span6 {
-        margin-left: 2.564102564102564%;
-        width: 48.717948717948715%;
+        margin-left: 2.5%;
+        width: 50%;
     }
 }
 
