--- a/application.css
+++ b/application.css
@@ -1579,6 +1579,14 @@ td.stores_pin{
         color: #555555;
         transition: border linear 0.2s, box-shadow linear 0.2s;
     }
+    textarea {
+        width: 206px;
+        height: auto;
+        background-color: #ffffff;
+        border: 1px solid #cccccc;
+        box-shadow: inset 0 1px 1px rgba(0,0,0,0.075);
+        transition: border linear 0.2s, box-shadow linear 0.2s;
+    }
     
 }
 
