--- a/application.css
+++ b/application.css
@@ -1587,6 +1587,13 @@ td.stores_pin{
         box-shadow: inset 0 1px 1px rgba(0,0,0,0.075);
         transition: border linear 0.2s, box-shadow linear 0.2s;
     }
+    select {
+        width: 220px;
+        height: 30px;
+        line-height: 30px;
+        background-color: #ffffff;
+        border: 1px solid #cccccc;
+    }
     
 }
 
