--- a/application.css
+++ b/application.css
@@ -1569,7 +1569,7 @@ td.stores_pin{
         max-width: 300px;
         width: 100%;
         height: 40px;
-        display: inline-block;
+        display: block;
         border: 1px solid #cccccc;
         border-radius: 3px;
         background-color: #ffffff;
