--- a/application.css
+++ b/application.css
@@ -1582,6 +1582,7 @@ td.stores_pin{
     textarea {
         width: 206px;
         height: auto;
+        display: block;
         background-color: #ffffff;
         border: 1px solid #cccccc;
         box-shadow: inset 0 1px 1px rgba(0,0,0,0.075);
@@ -1592,7 +1593,7 @@ td.stores_pin{
         padding: 4px 6px;
         width: 220px;
         height: 30px;
-        display: inline-block;
+        display: block;
         border: 1px solid #cccccc;
         border-radius: 3px;
         background-color: #ffffff;
